# cookiecutter-django-package

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cookiecutter.json  extensions.py  main.py  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_integration.py  test_readme.py  test_template.py
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/demo_project/: manage.py
{{cookiecutter.project_name}}/demo_project/{{cookiecutter.demo_project_name}}/: asgi.py  settings.py  wsgi.py
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/example_project/: asgi.py  manage.py  settings.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: apps.py  celery.py  urls.py
