[project]
name = "cookiecutter-django-package"
authors = [{ name = "Abhijeet pal", email = "no.email@example.com" }]
version = "0.1.0"
description = "A cookiecutter template for creating Django packages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["hooks"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "cookiecutter>=2.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=4.5.1",
    "prek>=0.3.8",
]
