[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookiecutter-django-package"
authors = [{ name = "Abhijeet pal", email = "no.email@example.com" }]
version = "0.1.0"
description = "A cookiecutter template for creating Django packages."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["hooks"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "cookiecutter>=2.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=4.5.1",
    "prek>=0.3.8",
    "tomli>=2.4.1",
    "build>=1.2.2",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hooks", "extensions"]


[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.venv", "/tests", "/__pycache__"]
